...
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/backgroundColor"
            tools:context=".ui.main.MainActivity">

            <ImageView
                android:id="@+id/btn_pesquisa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/search_marginStart"
                android:layout_marginTop="@dimen/search_marginTop"
                android:background="@color/search_background"
                android:src="@drawable/ic_baseline_search_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/campo_pesquisa"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/cp_mg_vertival"
                android:layout_marginStart="@dimen/cp_mg_Start"
                android:layout_marginEnd="@dimen/cp_mg_end"
                android:ems="16"
...
