...
        android:layout_marginEnd="@dimen/mgEnd_ic_not_found"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_not_found__1_" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="@dimen/whidth_filme_nao_existe"
        android:layout_height="@dimen/height_filme_nao_existe"
        android:layout_marginTop="@dimen/mgTop_filme_nao_existe"
        android:gravity="center|center_horizontal"
        android:text="@string/esse_filme_nao_existe"
        android:textColor="@color/genre_selected"
...
